build(jstfu): target Java 8 bytecode for the BVT tester image
The tester docker image (matrixorigin/tester:go1.26.4-jdk8) ships only
JDK 8 and no Maven, so the jar must be Java-8-runnable: release 17 -> 8,
replace arrow-switch / pattern-instanceof / text blocks / Java 11+ APIs.
All deps (grpc 1.68, protobuf 3.25, jackson 2.17, mysql-connector-j 8.4)
already ship Java 8 bytecode.  Verified: class-file major version 52,
jar smoke-tested under the actual tester image's JDK 8 (multi-chunk
stream, content byte-identical), mvn tests 10/10, e2e and BVT 108/108
re-run green with the rebuilt jar.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>